# Project_December

./: .gitignore  README  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  main.yml
server/: .gitignore  README  README.md  database.sql  db.js  package-lock.json  package.json  populateDummyData.js  populateLiveData.js  schema.sql  server.js  setupDatabase.js  utils.js
server/__tests__/: AiSearch.test.js  activities.test.js  event.test.js  friend.test.js  interest.test.js  login.test.js  signup.test.js  user.test.js  utils.test.js
server/__tests__/db/: populateDummyData.test.js
server/mailtrap/: emails.js  mailtrap.config.js
server/routes/: AiSearch.js  activities.js  aiSearch.js  class.js  emailVerification.js  event.js  forgotPassword.js  friend.js  interest.js  login.js  signup.js  user.js
server/schema/: schema.sql
server/scripts/: populateDummyData.js  populateLiveData.js  setupDatabase.js
server/webscraping/: knightconnect_events.csv  pyproject.toml  webscrape.py
webapp/: .gitignore  package-lock.json  package.json  tailwind.config.js
webapp/src/: App.js  config.js
webapp/src/components/Button/: button.jsx
webapp/src/components/Checkbox/: checkbox.jsx
webapp/src/components/Dropdown/: dropdown.css  dropdown.jsx
webapp/src/components/EventHeader/: eventHeader.css  eventHeader.jsx
webapp/src/components/EventsList/: EventsList.css  EventsList.jsx
webapp/src/components/FadeInText/: fadeInText.jsx
webapp/src/components/FilterModal/: filterModal.jsx
webapp/src/components/Modal/: modal.jsx
(+27 files in other folders)
